<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".userAccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/androidList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">


        </ListView>

        <Button
            android:id="@+id/addUser"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:onClick="toAddNewUserActivity"
            android:text="Add new user"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>