<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooseFridgeActivity">

    <ListView
        android:id="@+id/fridges_listview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:background="#C5B5B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/addButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginEnd="35dp"-->
<!--        android:text="Add manually"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/fridges_listview"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/PlainTextView" />-->

<!--    <EditText-->
<!--        android:id="@+id/PlainTextView"-->
<!--        android:layout_width="190dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="35dp"-->
<!--        android:background="#C5B5B5"-->
<!--        android:ems="10"-->
<!--        android:hint="Fridge id"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/fridges_listview"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/addButton"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="159dp"
        android:onClick="signoutButtonClicked"
        android:text="Sign out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridges_listview" />

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="35dp"
        android:onClick="scanButtonClicked"
        android:text="Add by scanning QR code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridges_listview" />

</androidx.constraintlayout.widget.ConstraintLayout>